fix: gap added btw menus

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -190,7 +190,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 2rem;
+    gap: 2.5rem;
     padding: 0;
     margin: 0;
 }
